docs: SPEC.md becomes the current spec; initial spec frozen in docs/design
- levinrag-spec.md (identical to SPEC.md's first commit) moves to
  docs/design/2026-09-22-initial-spec.md with a frozen-version header.
- SPEC.md is rewritten to describe the system as built, keeping the
  initial section numbers (all 35 section numbers cited from code and
  docs still resolve), with §21 remaining work and Appendix A listing
  every difference from the initial spec, indexed to docs/decisions.md.
- decisions.md: correction note for the health entry; README links.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>